--- a/src/Components/About/styles.scss
+++ b/src/Components/About/styles.scss
@@ -4,15 +4,26 @@
 .flex-container{
   display: flex;
 }
-.card{
+.flex-item-About{
   @include glassMorphism;
-  width: 500px;
+  width: 1000px;
   height: 700px;
   margin: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 12px;
 }
 .image{
+  width: 500px;
   background-image: url("../../assets/photo_2021-11-21_23-43-14.jpg");
   background-position: center;
   opacity: 55%;
+}
+
+.card1-header{
+  font-size: 3.2rem;
+}
+.card1-body{
+  font-size: 2.5rem;
+  text-align: justify;
 }
