--- a/src/sample.scss
+++ b/src/sample.scss
@@ -1,6 +1,6 @@
 .App{
   width: 100%;
-  height: 100vh;
+  //height: 100vh;
   background-image: linear-gradient(
   to bottom right,
   #4affde 0%,
