--- a/src/sample.scss
+++ b/src/sample.scss
@@ -1,6 +1,5 @@
-.App {
+@mixin background{
   width: 100%;
-  //height: 100vh;
   background-image: linear-gradient(
     to bottom right,
     #4affde 0%,
@@ -19,4 +18,7 @@
       background-position: 100% 100%;
     }
   }
+}
+.App{
+  @include background;
 }
