--- a/src/Components/Contact-us/styles.scss
+++ b/src/Components/Contact-us/styles.scss
@@ -23,6 +23,8 @@
   width: 490px;
   height: 200px;
   margin: 10px;
+  transition: 0.3s;
+  animation: t;
 }
 .socialMedia-wrapper {
   text-align: center;
@@ -64,4 +66,7 @@
 .msg-hide {
   transition: all 0.5s ease-in-out;
   opacity: 0;
+}
+.container-flex-item:hover {
+  transform: translateY(0.2rem);
 }
