light theme is updated

--- a/src/sample.scss
+++ b/src/sample.scss
@@ -32,9 +32,10 @@
 @mixin colorEffectLight {
   background-image: linear-gradient(
     to bottom right,
-    #9cffee 0%,
-    #a8bfe6 60%,
-    white 100%
+    #ECF2F9 0%,
+    #C8D9EB 40%,
+    #F0D9DA 60%,
+    #F9ECEC 100%
   );
 }
 
