theme changes are saved to localStorage

--- a/src/Components/Spinner/styles.scss
+++ b/src/Components/Spinner/styles.scss
@@ -3,8 +3,16 @@
 
 .wrapper {
   @include background;
-  @include colorEffectDefault; 
   height: 100vh;
+}
+.wrapper-default{
+  @include colorEffectDefault;
+}
+.wrapper-light{
+  @include colorEffectLight;
+}
+.wrapper-dark{
+  @include colorEffectDark;
 }
 .content{
   margin: auto;
