Contact-us RWD improvement

--- a/src/Components/Contact-us/styles.scss
+++ b/src/Components/Contact-us/styles.scss
@@ -85,3 +85,12 @@
     font-size: 2rem;
   }
 }
+@media only screen and (max-width: 460px) {
+  .container-flex-item{
+    width: 100px;
+    height: 100px;
+  }
+  .socialMedia-name{
+    display: none;
+  }
+}
