--- a/src/Components/Contact-us/styles.scss
+++ b/src/Components/Contact-us/styles.scss
@@ -87,10 +87,10 @@
 }
 @media only screen and (max-width: 460px) {
   .container-flex-item{
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
   }
   .socialMedia-name{
-    display: none;
+    font-size: 1rem;
   }
 }
