Spinner RWD edit

--- a/src/Components/Spinner/styles.scss
+++ b/src/Components/Spinner/styles.scss
@@ -31,10 +31,13 @@
 .welcome-text{
   @include glassMorphism;
   max-width: 600px;
-  height: 100px;
-  border-radius: 12px;
-  font-size: 1.5rem;
+  height: 80px;
+  border-radius: 12px 12px 0 0;
+  font-size: 1.2rem;
   padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  bottom: 1px;
 }
 @media only screen and (max-width: 500px) {
   .welcome-text{
