persian font is declared

--- a/src/sample.scss
+++ b/src/sample.scss
@@ -51,3 +51,11 @@
   @include background;
   @include colorEffectDefault;
 }
+@font-face {
+  font-family: Tanha;
+  src: url('./assets/font/Tanha.eot');
+  src: url('./assets/font/Tanha.eot?#iefix') format('embedded-opentype'),
+       url('./assets/font/Tanha.woff') format('woff'),
+       url('./assets/font/Tanha.ttf') format('truetype');
+  font-weight: normal;
+}
