--- a/src/Components/About/styles.scss
+++ b/src/Components/About/styles.scss
@@ -16,7 +16,7 @@
   width: 33%;
   background-image: url("../../assets/photo_2021-11-21_23-43-14.jpg");
   background-position: center;
-  opacity: 65%;
+  opacity: .65;
 }
 
 .card1-header {
