Contact-us persian font is added

--- a/src/Components/Contact-us/styles.scss
+++ b/src/Components/Contact-us/styles.scss
@@ -2,7 +2,7 @@
 
 .glass-contact-us {
   border-radius: 12px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway",'Tanha',  sans-serif;
 }
 .container-header {
   @include glassMorphism;
