--- a/src/Components/About/styles.scss
+++ b/src/Components/About/styles.scss
@@ -2,68 +2,102 @@
 
 .flex-container-about {
   display: flex;
+  align-items: center;
+  // height: 100%;
+  // height: 600px;
+  width: 100%;
 }
 .flex-item-About {
   @include glassMorphism;
   width: 66%;
-  height: 700px;
   margin: 10px;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 12px;
 }
-.dirR{
+.dirR {
   direction: rtl;
 }
-.dirL{
+.dirL {
   direction: ltr;
 }
-.image {
+.image-container {
+  display: block;
   width: 33%;
-  background-image: url("../../assets/photo_2021-11-21_23-43-14.jpg");
-  background-position: center;
-  opacity: .65;
+  height: 100%;
+  opacity: 0.85;
+  padding: 0 !important;
+}
+
+.image {
+  width: 100%;
+  min-width: 400px;
+  height: 100%;
+  // object-fit: contain;
+  border-radius: 12px;
+  // aspect-ratio: 4/3;
+  resize: none;
+  background-position: center 0;
 }
 
 .card1-header {
   font-size: 3.2rem;
 }
 .card1-body {
-  font-size: 2.2rem;
+  font-size: 2rem;
   text-align: justify;
 }
-@media only screen and (max-width:1400px){
-  .flex-container-about{
+
+@media only screen and (max-width: 1240px) {
+  .flex-container-about {
     flex-direction: column;
   }
-  .flex-item-About{
-    width: 100% ;
-  }
-  #about {
-    margin-left: -10px;
+
+  .flex-item-About {
+    width: 100%;
   }
 }
-@media only screen and (max-width:1000px){
-  .flex-item-About > .card1-body{
-    font-size: 1.6rem;
+
+@media only screen and (max-width: 520px) {
+  .card1-header {
+    font-size: 2rem;
   }
-  .card1-header{
-    font-size: 3rem;
-  }
-}
-@media only screen and (max-width: 460px){
-  .flex-item-About > .card1-body{
-    font-size: 1.27rem;
-  }
-  .card1-header{
-    font-size: 2.8rem;
+  .card1-body {
+    font-size: 1.2rem;
   }
 }
-@media only screen and (max-width: 330px){
-  .flex-item-About > .card1-body{
-    font-size: 1.30rem;
-  }
-  .card1-header{
-    font-size: 2.5rem;
-  }
-}
+// @media only screen and (max-width: 1400px) {
+//   .flex-container-about {
+//     flex-direction: column;
+//   }
+//   .flex-item-About {
+//     width: 100%;
+//   }
+//   #about {
+//     margin-left: -10px;
+//   }
+// }
+// @media only screen and (max-width: 1000px) {
+//   .flex-item-About > .card1-body {
+//     font-size: 1.6rem;
+//   }
+//   .card1-header {
+//     font-size: 3rem;
+//   }
+// }
+// @media only screen and (max-width: 460px) {
+//   .flex-item-About > .card1-body {
+//     font-size: 1.27rem;
+//   }
+//   .card1-header {
+//     font-size: 2.8rem;
+//   }
+// }
+// @media only screen and (max-width: 330px) {
+//   .flex-item-About > .card1-body {
+//     font-size: 1.3rem;
+//   }
+//   .card1-header {
+//     font-size: 2.5rem;
+//   }
+// }
