fake article holders are added

--- a/src/Components/BlogCard/styles.scss
+++ b/src/Components/BlogCard/styles.scss
@@ -12,3 +12,10 @@
     transition: 0.3s;
   }
 }
+.blog-card.soon {
+  min-width: 300px;
+  min-height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
